# cop3503project

./: .gitattributes  .gitignore  CMakeLists.txt  imgDisplay.cpp  interface_outline.txt  readme.md
Coin Class/: coin.cpp  coin.h
Color/Color/: main.cpp
Color/Color.xcodeproj/: project.pbxproj
Color/Color.xcodeproj/project.xcworkspace/xcshareddata/: Color.xccheckout
Color/Color.xcodeproj/project.xcworkspace/xcuserdata/saharkausar.xcuserdatad/: UserInterfaceState.xcuserstate
Color/Color.xcodeproj/xcuserdata/saharkausar.xcuserdatad/xcschemes/: Color.xcscheme  xcschememanagement.plist
prototype/: prototype.py
src/: CMakeLists.txt  CoinStruct.h  Data.cpp  Data.h  UserInterface.cpp  binarize.cpp  coin.cpp  coin.h  data.cpp  data.h  mainTest.cpp
src/vision/: CMakeCache.txt  CMakeLists.txt  Makefile  binarize.cpp  binarize.h  cmake_install.cmake  coin.cpp  label.cpp  vision.cpp  vision.h  vision_test  vision_test.cpp  visualization.cpp
test/: CMakeLists.txt
test/Real_test_imgs/: .directory
